--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -12,10 +12,10 @@
   <script src="lib/jasmine-2.5.2/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/FizzBuzz.js"></script>
+  <script src="src/airport.js"></script>
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
-  <script src="spec/fizzBuzzSpec.js"></script>
+  <script src="spec/airportSpec.js"></script>
 
 
 </head>
