--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -13,9 +13,11 @@
 
   <!-- include source files here... -->
   <script src="src/airport.js"></script>
+  <script src="src/plane.js"></script>
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/airportSpec.js"></script>
+  <script src="spec/planeSpec.js"></script>
 
 
 </head>
